js/js.translator/testData/incremental/invalidation/privateDeclarationLeakThroughDefaultParamWithIntraModuleInliner/main/f.3.kt
private fun prop() = "3"

internal inline fun foo(lambda: () -> String = ::prop): String {
    return lambda()
}
